lec1/exercises.py.err
  File "<stdin>", line 16
    print word + "&" + rows[word]
        ^
IndentationError: expected an indented block
